v3.21 2014/xx/xx
~~~~~~~~~~~~~~~~
New: Exercise OD.T30, proof for product of upper triangular matrices
Typo: Theorem SMS, Definition SYM, not SM (Nathan Laviste)

v3.20 2013/12/28
~~~~~~~~~~~~~~~~
New: Exercise ILT.T10, solution added
New: Section CNO, Theorems ZPCN, ZPZT about zero divisors
New: Exercise DM.M30, row-equivalence and Theorem PEEF (suggested by Todd Pytel)
Change: Bijection defined, never used (Anna Dovzhik)
Edit: Clarified lead-in to Theorem PSSD (Michael DuBois)
Edit: Example CAEHW, added an "and" (Anna Dovzhik)
Edit: Example BDE, removed stale link (Anna Dovzhik)
Edit: Section VS, removed stale link to Section F
Edit: Minor edits in Sections VS, S, LISS, B, D, PD
Edit: Theorem CRN, reworded proof, correction included
Edit: Sage SM, took out unnecessary commas (Jenna Fontaine)
Edit: Section LT, split sentence before Theorem MOLT (Jenna Fontaine)
Edit: Section LT, rephrase sentence just prior to Example LTDB1 (Anna Dovzhik)
Edit: Rework lead-in sentence to Definition PI (Becky Hanscam)
Edit: Examples RAO, FRAN, parenthetical remark looks like function argument (Anna Dovzhik)
Edit: Proof of Theorem NME9, new commas for readability (Anna Dovzhik)
Typo: Sage B, "that" changes to "than" (Jenna Fontaine)
Typo: Theorem ELIS, "vector space" changed to "a vector space" (Jenna Fontaine)
Typo: Theorem SSS, proof, "also a vector space" (Jenna Fontaine)
Typo: LaTeX/XML formatting in Exercise VS.T10 (Chris Spalding)
Typo: Sage SUTH0, "row space of a matrix by the rows" (Jenna Fontaine)
Typo: Theorem CRN, proof, "Theorem BNS provides a basis" (Jenna Fontaine)
Typo: Theorem CRN, proof, "column without a leading 1" (Jenna Fontaine)
Typo: Subsection PD.GT, "the construction of a basis" (Jenna Fontaine)
Typo: Sage DMS, double "we" (Michael DuBois)
Typo: LaTeX/XML formatting in Solution LISS.C21 (Chris Spalding, Paul Makl)
Typo: Problem PD.T05, added missing "for" (Jenna Fontaine)
Typo: Exercise PD.T33, "set is basis" to "set is a basis" (Jenna Fontaine)