@@ -118,7 +118,7 @@ User basis matrix:
 <example acro="CSANS" index="column space!as null space">
 <title>Column space as null space</title>
 
-<p>Lets find the column space of the matrix $A$ below with a new approach.
+<p>Let's find the column space of the matrix $A$ below with a new approach.
 <equation>
 A=
 \begin{bmatrix}
@@ -146,7 +146,7 @@ A=
 </equation>
 </p>
 
-<p>To identify solutions we will bring this matrix to reduced row-echelon form.  Despite the presence of variables in the last column, there is nothing to stop us from doing this, except our numerical routines on calculators cannot be used, and even some of the symbolic algebra routines do some unexpected maneuvers with this computation.  So do it by hand.  Yes, it is a bit of work.  But worth it.  We'll still be here when you get back.  Notice along the way that the row operations are <em>exactly</em> the same ones you would do if you were just row-reducing the coefficient matrix alone, say in connection with a homogeneous system of equations.  The column with the $b_i$ acts as a sort of bookkeeping device.  There are many different possibilities for the result, depending on what order you choose to perform the row operations, but shortly we will all be on the same page.  If you want to match our work right now, use row 5 to remove any occurence of $b_1$ from the other entries of the last column, and use row 6 to remove any occurence of $b_2$ from the last columns.we have:
+<p>To identify solutions we will bring this matrix to reduced row-echelon form.  Despite the presence of variables in the last column, there is nothing to stop us from doing this, except our numerical routines on calculators cannot be used, and even some of the symbolic algebra routines do some unexpected maneuvers with this computation.  So do it by hand.  Yes, it is a bit of work.  But worth it.  We'll still be here when you get back.  Notice along the way that the row operations are <em>exactly</em> the same ones you would do if you were just row-reducing the coefficient matrix alone, say in connection with a homogeneous system of equations.  The column with the $b_i$ acts as a sort of bookkeeping device.  There are many different possibilities for the result, depending on what order you choose to perform the row operations, but shortly we will all be on the same page.  If you want to match our work right now, use row 5 to remove any occurrence of $b_1$ from the other entries of the last column, and use row 6 to remove any occurrence of $b_2$ from the last columns. We have:
 <alignmath>
 \begin{bmatrix}
 <![CDATA[ \leading{1} & 0 & 0 & 0 & 2 & b_3 - b_4 + 2 b_5 - b_6\\]]>
@@ -780,7 +780,7 @@ A=
 <example acro="FS2" index="four subsets">
 <title>Four subsets, no. 2</title>
 
-<p>Now lets return to the matrix $A$ that we used to motivate this section in <acroref type="example" acro="CSANS" />,
+<p>Now let's return to the matrix $A$ that we used to motivate this section in <acroref type="example" acro="CSANS" />,
 <equation>
 A=
 \begin{bmatrix}
