@@ -2,6 +2,7 @@ v3.21 2014/xx/xx
 ~~~~~~~~~~~~~~~~
 New: Exercise OD.T30, proof for product of upper triangular matrices
 Typo: Theorem SMS, Definition SYM, not SM (Nathan Laviste)
+Typo: Five minor mistakes in Section FS (Sam Coates)
 
 v3.20 2013/12/28
 ~~~~~~~~~~~~~~~~
